[package]
name = "pdf-rotate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "=1.0.102"
pdfium-render = "=0.9.1"

[dependencies.windows]
version = "=0.62.2"
features = [
    "Graphics_Imaging",
    "Media_Ocr",
    "Win32_System_WinRT",
]

[profile.dev]
debug = 0

[profile.dev.package."*"]
debug = 0

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
